--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@joseavilasg/react-compound-timer": "^1.1.15-1",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.358.0",
     "next": "14.1.0",
     "react": "^18",
